--- a/www/index.html
+++ b/www/index.html
@@ -7,18 +7,20 @@
 	<title>Document</title>
 </head>
 
-<div id="div_reg">
+<div id="div_reg" style="float: right; width: 48%">
+    <span>Register</span>  <br>
 	<input type="text" name="reg_name" id="reg_name" placeholder="Name"> <br />
 	<input type="text" name="reg_username" id="reg_username" placeholder="Username">
     <label for="reg_username" id="reg_username_status"></label>
     <br />
-	<input type="password" name="reg_password" id="reg_password" placeholder="password">
+	<input type="password" name="reg_password" id="reg_password" placeholder="password"> <br />
 	<button id="reg_submit">Register</button>
 </div>
 
-<div id="div_login">
-	<input type="text" name="login_username" id="login_username"> <br />
-	<input type="password" name="login_password" id="login_password">
+<div id="div_login" style="float: left; width: 48%">
+    <span>Login</span> <br>
+	<input type="text" name="login_username" id="login_username" placeholder="username"> <br />
+	<input type="password" name="login_password" id="login_password" placeholder="password"> <br />
 	<button id="login_submit">Login</button>
 </div>
 
