miscellaneous bug fixes

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,16 @@
 		<input type="text" id="to" placeholder="to" >
 		<button id="msg_submit">Send Message</button>
 	</div>
+    <br />
+    <div id="div_group">
+        <input type="text" id="group_name" placeholder="Group Name" />
+        <input type="text" id="group_member" placeholder="csv string of group member" />
+        <button id="create_group">Create Group </button> 
+    </div>
+    <div>
+        <ul id="groups">
+        </ul>
+    </div>
 	<div>
 		<ul id="message">
 
