Updated to architecture v2.x

--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,8 @@
 	<div id="div_msg">
 		<input type="text" id="msg" placeholder="Your msg to send..">
 		<input type="text" id="to" placeholder="to" >
-		<button id="msg_submit">Send Message</button>
+		<button id="msg_submit_v2">Send Message V2</button>
+    <button id="msg_submit_v1">Send Message V1</button>
 	</div>
     <br />
     <div id="div_group">
