feat: Added rest endpoint for send messages

--- a/www/index.html
+++ b/www/index.html
@@ -36,8 +36,11 @@
 	<div id="div_msg">
 		<input type="text" id="msg" placeholder="Your msg to send..">
 		<input type="text" id="to" placeholder="to" >
-		<button id="msg_submit_v2">Send Message V2</button>
-    <button id="msg_submit_v1">Send Message V1</button>
+		<button id="msg_submit_v2_ws">Send Message V2 WS</button>
+    <button id="msg_submit_v1_ws">Send Message V1 WS</button>
+
+    <button id="msg_submit_v2_rest">Send Message V2 REST</button>
+    <button id="msg_submit_v1_rest">Send Message V1 REST</button>
 	</div>
     <br />
     <div id="div_group">
