--- a/www/index.html
+++ b/www/index.html
@@ -56,14 +56,25 @@
         <div class="form-horizontal">
           <div>
             <div class="form-group row">
+              <div class="col-md-2">
+                <label for="channel">Channel</label>
+                <select id="msg_channel" value="INDIVIDUAL">
+                  <option value="INDIVIDUAL" selected="selected">Individual</option>
+                  <option value="GROUP">Group</option>
+                  <option value="OTHER">Other</option>
+                </select>
+              </div>
               <div class="col-md-3">
                 <label for="type">Message Type</label>
-                <select id="type" value="INDIVIDUAL">
-                  <option value="INDIVIDUAL">Individual</option>
-                  <option value="GROUP">Group</option>
-                  <option value="NOTIFICATION">Notification</option>
+                <select id="type" value="MESSAGE">
+                  <option value="MESSAGE" selected="selected">Message</option>
+                  <option value=" NOTIFICATION">Notification</option>
                   <option value="CUSTOM">Custom</option>
                 </select>
+              </div>
+              <div class="col-md-2">
+                <label for="ephemeral">Ephemeral</label>
+                <input type="checkbox" name="ephemeral" id="ephemeral" value="true">
               </div>
               <div class="col-md-3">
                 <input type="text" id="to" placeholder="destination" />
@@ -102,7 +113,7 @@
             <span>
               <label for="version">Version:</label>
               <select name="version" id="version" value="3.0">
-                <option value="3.0">V3 (proto)</option>
+                <option value="3.0" selected="selected">V3 (proto)</option>
                 <option value="2.0">V2 (Text)</option>
                 <option value="1.0">V1 (Text)</option>
               </select>
@@ -111,7 +122,7 @@
             <span>
               <label for="channel">Channel:</label>
               <select name="channel" id="channel" value="ws">
-                <option value="ws">Websocket</option>
+                <option value="ws" selected="selected">Websocket</option>
                 <option value="rest">Rest</option>
               </select>
             </span>
